--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div class="name" id="animated-name"></div>
 
   <div class="message">
-    Wishing you a joyous and memorable naming ceremony celebration!<br><br>
+    Wishing.... you a joyous and memorable naming ceremony celebration!<br><br>
     May <strong>Veda Vyasa Karthik</strong>'s life be filled with love, success, and happiness.<br><br>
     🎉 With love and blessings! 🎉
   </div>
