--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
 
   <!-- Hidden audio player -->
-  <audio id="backgroundAudio" autoplay muted loop>
+  <audio id="backgroundAudio" autoplay loop playsinline>
     <source src="og.mp3" type="audio/mp3">
   </audio>
 
